--- a/admin toko/pelanggan_backup.html
+++ b/admin toko/pelanggan_backup.html
@@ -218,7 +218,7 @@
 						</li>
 						<!-- Penawaran -->
 						<li class="m-menu__item" aria-haspopup="true" >
-							<a  href="penawaran.html" class="m-menu__link ">
+							<a  href="manajemen_penawaran.html" class="m-menu__link ">
 								<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
@@ -231,7 +231,7 @@
 						</li>
 						<!-- Pelanggan -->
 						<li class="m-menu__item  m-menu__item--active" aria-haspopup="true" >
-							<a  href="pelanggan.html" class="m-menu__link ">
+							<a  href="manajemen_pelanggan.html" class="m-menu__link ">
 								<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
