--- a/admin toko/manajemen_pembayaran.html
+++ b/admin toko/manajemen_pembayaran.html
@@ -15,7 +15,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin Toko | SPK Survey
+			Admin Toko | Nota
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,6 +43,7 @@
 		<!-- end:: Style tambahan -->
 		<!--end::Base Styles -->
 		<link rel="shortcut icon" href="../assets/demo/default/media/img/logo/favicon.ico" />
+		<script src="http://localhost:35729/livereload.js"></script>
 	</head>
 	<!-- end::Head -->
 	<!-- end::Body -->
@@ -131,7 +132,7 @@
 						<!-- ASIDE MENU DISINI -->
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
 							<!-- DASHBOARD -->
-							<li class="m-menu__item " aria-haspopup="true" >
+							<li class="m-menu__item  " aria-haspopup="true" >
 								<a  href="index.html" class="m-menu__link ">
 									<i class="m-menu__link-icon flaticon-line-graph"></i>
 									<span class="m-menu__link-title">
@@ -156,8 +157,8 @@
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pesanan -->
-							<li class="m-menu__item  m-menu__item--submenu m-menu__item--open m-menu__item--expanded" aria-haspopup="true" data-menu-submenu-toggle="hover">
+							<!-- Manajemen Pesanan-->
+							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
 								<a href="#" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon flaticon-folder-2"></i>
 									<span class="m-menu__link-text">
@@ -175,7 +176,7 @@
 												</span>
 											</span>
 										</li>
-										<li class="m-menu__item  " aria-haspopup="true">
+										<li class="m-menu__item " aria-haspopup="true">
 											<a href="spk_pemasangan.html" class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
@@ -215,7 +216,7 @@
 												</span>
 											</a>
 										</li>
-										<li class="m-menu__item m-menu__item--active" aria-haspopup="true">
+										<li class="m-menu__item " aria-haspopup="true">
 											<a href="spk_survey.html"  class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
@@ -268,7 +269,7 @@
 								</a>
 							</li>
 							<!-- Manajemen Pembayaran -->
-							<li class="m-menu__item" aria-haspopup="true" >
+							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
 								<a  href="manajemen_pembayaran.html" class="m-menu__link ">
 									<i class="m-menu__link-icon flaticon-file-1"></i>
 									<span class="m-menu__link-title">
@@ -291,7 +292,7 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									SPK Survey
+									Manajemen Pembayaran
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
@@ -303,19 +304,9 @@
 										-
 									</li>
 									<li class="m-nav__item">
-										<a href="#.html" class="m-nav__link">
+										<a href="manajemen_pembayaran.html" class="m-nav__link">
 											<span class="m-nav__link-text">
-												Manajemen Pesanan
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="spk_survey.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												SPK Survey
+												Manajemen Pembayaran
 											</span>
 										</a>
 									</li>
@@ -329,107 +320,220 @@
 							<div class="col-xl-12">
 								<div class="m-portlet m-portlet--mobile">
 									<div class="m-portlet__body">
-										<!--begin: Search Form -->
-										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-											<div class="row align-items-center">
-												<div class="col-md-12">
-													<div class="form-group m-form__group row align-items-center">
-														<div class="col-md-4">
-															<div class="m-portlet__head-title">
-																<h3 class="m-portlet__head-text">
-																	List SPK Survey
-																</h3>
-																<button onclick="window.location.href = 'tambah_spk_survey.html';" type="button" class="btn btn-success btn_tambah_spk">Tambah SPK</button>
-															</div>
-														</div>
-														<div class="col-md-4 offset-md-4">
-															<div class="m-input-icon m-input-icon--left">
-																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-																<span class="m-input-icon__icon m-input-icon__icon--left">
-																	<span>
-																		<i class="la la-search"></i>
-																	</span>
-																</span>
+										<ul class="nav nav-pills" role="tablist">
+											<li class="nav-item">
+												<a class="nav-link active" data-toggle="tab" href="#m_tabs_list_request">
+													Request
+												</a>
+											</li>
+											<li class="nav-item">
+												<a class="nav-link" data-toggle="tab" href="#m_tabs_list_nota">
+													Nota Telah Terbit
+												</a>
+											</li>
+										</ul>
+										<div class="tab-content">
+											<div class="tab-pane active" id="m_tabs_list_request" role="tabpanel">
+												<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+													<div class="row align-items-center">
+														<div class="col-md-12">
+															<div class="form-group m-form__group row align-items-center">
+																<div class="col-md-4">
+																	<div class="m-portlet__head-title">
+																		<h3 class="m-portlet__head-text">
+																			List SPK 
+																		</h3>
+																	</div>
+																</div>
+																<div class="col-md-4 offset-md-4">
+																	<div class="m-input-icon m-input-icon--left">
+																		<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+																		<span class="m-input-icon__icon m-input-icon__icon--left">
+																			<span>
+																				<i class="la la-search"></i>
+																			</span>
+																		</span>
+																	</div>
+																</div>
 															</div>
 														</div>
 													</div>
 												</div>
+												<!--end: Search Form -->
+												<!--begin: Datatable -->
+												<!-- <div class="m_datatable" id="local_data"></div> -->
+												<table class="table" id="tbl_spk">
+													<thead>
+														<tr>
+															<th>No</th>
+															<th>Tanggal</th>
+															<th>No SPK</th>
+															<th>Nama Pelanggan</th>
+															<th>No Telpon</th>
+															<th>Aksi</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>1</td>
+															<td>20/19/2018</td>
+															<td>1923102301</td>
+															<td>Bpk. Hendy</td>
+															<td>085145322137</td>
+															<td>
+																<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+														<tr>
+															<td>2</td>
+															<td>20/19/2018</td>
+															<td>1923102301</td>
+															<td>Bpk. Suminto</td>
+															<td>085145322137</td>
+															<td>
+																<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+														<tr>
+															<td>3</td>
+															<td>20/19/2018</td>
+															<td>1923102301</td>
+															<td>Bpk. Suminto</td>
+															<td>085145322137</td>
+															<td>
+																<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+														<tr>
+															<td>4</td>
+															<td>20/19/2018</td>
+															<td>1923102301</td>
+															<td>Ibu Ida</td>
+															<td>085145322137</td>
+															<td>
+																<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+														<tr>
+															<td>5</td>
+															<td>20/19/2018</td>
+															<td>1923102301</td>
+															<td>Ibu Sry</td>
+															<td>085145322137</td>
+															<td>
+																<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+													</tbody>
+												</table>
+												<!--end: Datatable -->
+											</div>
+											<div class="tab-pane" id="m_tabs_list_nota" role="tabpanel">
+												<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+													<div class="row align-items-center">
+														<div class="col-md-12">
+															<div class="form-group m-form__group row align-items-center">
+																<div class="col-md-4">
+																	<div class="m-portlet__head-title">
+																		<h3 class="m-portlet__head-text">
+																			List Nota
+																		</h3>
+																	</div>
+																</div>
+																<div class="col-md-4 offset-md-4">
+																	<div class="m-input-icon m-input-icon--left">
+																		<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+																		<span class="m-input-icon__icon m-input-icon__icon--left">
+																			<span>
+																				<i class="la la-search"></i>
+																			</span>
+																		</span>
+																	</div>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
+												<!--end: Search Form -->
+												<!--begin: Datatable -->
+												<!-- <div class="m_datatable" id="local_data"></div> -->
+												<table class="table" id="tbl_nota">
+													<thead>
+														<tr>
+															<th>No</th>
+															<th>Tanggal</th>
+															<th>No Invoice</th>
+															<th>Nama Pelanggan</th>
+															<th>Alamat</th>
+															<th>Aksi</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>1.</td>
+															<td>14/05/2019</td>
+															<td>
+																0109/NSSM/MKS/III/2019
+															</td>
+															<td>PT. Sumber Agri Sehat</td>
+															<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
+															<td>
+																<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+														<tr>
+															<td>2</td>
+															<td>14/05/2019</td>
+															<td>
+																0109/NSSM/MKS/III/2019
+															</td>
+															<td>PT. Sumber Agri Sehat</td>
+															<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
+															<td>
+																<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+														<tr>
+															<td>3</td>
+															<td>14/05/2019</td>
+															<td>
+																0109/NSSM/MKS/III/2019
+															</td>
+															<td>PT. Sumber Agri Sehat</td>
+															<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
+															<td>
+																<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+														<tr>
+															<td>4</td>
+															<td>14/05/2019</td>
+															<td>
+																0109/NSSM/MKS/III/2019
+															</td>
+															<td>PT. Sumber Agri Sehat</td>
+															<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
+															<td>
+																<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+														<tr>
+															<td>5</td>
+															<td>14/05/2019</td>
+															<td>
+																0109/NSSM/MKS/III/2019
+															</td>
+															<td>PT. Sumber Agri Sehat</td>
+															<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
+															<td>
+																<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+															</td>
+														</tr>
+													</tbody>
+												</table>
+												<!--end: Datatable -->
 											</div>
 										</div>
-										<!--end: Search Form -->
-										<!--begin: Datatable -->
-										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_spk_survey">
-											<thead>
-												<tr>
-													<th>No</th>
-													<th>Tanggal</th>
-													<th>No SPK</th>
-													<th>Nama Pelanggan</th>
-													<th>No Telpon</th>
-													<th>Status</th>
-													<th>Aksi</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>1</td>
-													<td>20/19/2018</td>
-													<td>0037/SSM/SPK-PSG/MKS/III/2019</td>
-													<td>TK. Aisiyah Bustanul Atfhal</td>
-													<td>085145322xxx</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>2</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>3</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>4</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Ida</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>5</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Rahm</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-										<!--end: Datatable -->
 									</div>
 								</div>
 							</div>
@@ -473,7 +577,7 @@
 		<!--end::Page Snippets -->
 		<script src="http://localhost:35729/livereload.js"></script>
 		<script type="text/javascript">
-			var tbl_spk_survey = $('#tbl_spk_survey').mDatatable({
+			var tbl_spk = $('#tbl_spk').mDatatable({
 				data: {
 					saveState: {cookie: false},
 					/*type: 'remote',
@@ -538,6 +642,79 @@
 				},
 				{
 					field: 'Status',
+					textAlign: 'center',
+				},
+				{
+					field: 'Aksi',
+					textAlign: 'center',
+				}
+
+				],
+			});
+		</script>
+		<script type="text/javascript">
+			var tbl_spk = $('#tbl_nota').mDatatable({
+				data: {
+					saveState: {cookie: false},
+					/*type: 'remote',
+			        source: {
+			          read: {
+			            // sample GET method
+			            method: 'GET',
+			            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
+			            map: function(raw) {
+			              // sample data mapping
+			              var dataSet = raw;
+			              if (typeof raw.data !== 'undefined') {
+			                dataSet = raw.data;
+			              }
+			              return dataSet;
+			            },
+			          },
+			        },
+			        pageSize: 10,
+			        serverPaging: true,
+			        serverFiltering: true,
+			        serverSorting: true,*/
+			    },
+				// layout definition
+				layout: {
+					theme: 'default', // datatable theme
+					class: '', // custom wrapper class
+					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
+					// height: 450, // datatable's body's fixed height
+					footer: false // display/hide footer
+				},
+
+				// column sorting
+				sortable: false,
+				search: {
+					input: $('#generalSearch'),
+				},
+				columns: [
+
+				{
+					field: 'No',
+					textAlign: 'center',
+					width: 50
+				},
+				{
+					field: 'Tanggal',
+					textAlign: 'center',
+					type:'date',
+					format: 'DD/MM/YYYY',
+				},
+				{
+					field: 'No Invoice',
+					textAlign: 'center',
+					width: 200
+				},
+				{
+					field: 'Nama Pelanggan',
+					textAlign: 'center',
+				},
+				{
+					field: 'Alamat',
 					textAlign: 'center',
 				},
 				{
