--- a/admin toko/manajemen_penawaran.html
+++ b/admin toko/manajemen_penawaran.html
@@ -9,13 +9,13 @@
 	Like: www.facebook.com/keenthemes
 	Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
 	Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-	License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.-->
+	License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your projecta-->
 	<html lang="en" >
 	<!-- begin::Head -->
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin Toko | SPK Survey
+			Admin Toko | Manajemen Penawaran
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -156,8 +156,8 @@
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pesanan -->
-							<li class="m-menu__item  m-menu__item--submenu m-menu__item--open m-menu__item--expanded" aria-haspopup="true" data-menu-submenu-toggle="hover">
+							<!-- Manajemen Pesanan-->
+							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
 								<a href="#" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon flaticon-folder-2"></i>
 									<span class="m-menu__link-text">
@@ -175,7 +175,7 @@
 												</span>
 											</span>
 										</li>
-										<li class="m-menu__item  " aria-haspopup="true">
+										<li class="m-menu__item " aria-haspopup="true">
 											<a href="spk_pemasangan.html" class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
@@ -215,7 +215,7 @@
 												</span>
 											</a>
 										</li>
-										<li class="m-menu__item m-menu__item--active" aria-haspopup="true">
+										<li class="m-menu__item " aria-haspopup="true">
 											<a href="spk_survey.html"  class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
@@ -229,7 +229,7 @@
 								</div>
 							</li>
 							<!-- Manajemen Penawaran -->
-							<li class="m-menu__item" aria-haspopup="true" >
+							<li class="m-menu__item  m-menu__item--active" aria-haspopup="true" >
 								<a  href="manajemen_penawaran.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
 									<span class="m-menu__link-title">
@@ -291,7 +291,7 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									SPK Survey
+									Penawaran
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
@@ -305,17 +305,7 @@
 									<li class="m-nav__item">
 										<a href="#.html" class="m-nav__link">
 											<span class="m-nav__link-text">
-												Manajemen Pesanan
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="spk_survey.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												SPK Survey
+												Penawaran
 											</span>
 										</a>
 									</li>
@@ -337,9 +327,9 @@
 														<div class="col-md-4">
 															<div class="m-portlet__head-title">
 																<h3 class="m-portlet__head-text">
-																	List SPK Survey
+																	List Penawaran
 																</h3>
-																<button onclick="window.location.href = 'tambah_spk_survey.html';" type="button" class="btn btn-success btn_tambah_spk">Tambah SPK</button>
+																<button onclick="window.location.href = 'buat_penawaran.html';" type="button" class="btn btn-success btn_tambah_spk">Buat Penawaran</button>
 															</div>
 														</div>
 														<div class="col-md-4 offset-md-4">
@@ -359,15 +349,14 @@
 										<!--end: Search Form -->
 										<!--begin: Datatable -->
 										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_spk_survey">
+										<table class="table" id="tbl_list_penawaran">
 											<thead>
 												<tr>
 													<th>No</th>
 													<th>Tanggal</th>
-													<th>No SPK</th>
-													<th>Nama Pelanggan</th>
-													<th>No Telpon</th>
-													<th>Status</th>
+													<th>Reff</th>
+													<th>Penerima</th>
+													<th>Perihal</th>
 													<th>Aksi</th>
 												</tr>
 											</thead>
@@ -375,56 +364,51 @@
 												<tr>
 													<td>1</td>
 													<td>20/19/2018</td>
-													<td>0037/SSM/SPK-PSG/MKS/III/2019</td>
-													<td>TK. Aisiyah Bustanul Atfhal</td>
-													<td>085145322xxx</td>
-													<td>Selesai</td>
+													<td>116/SPH-AC/SSM/X/2018</td>
+													<td>BRI Kab. Barru</td>
+													<td>Penawaran Harga AC</td>
 													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_penawaran.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 												<tr>
 													<td>2</td>
 													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pengerjaan</td>
+													<td>116/SPH-AC/SSM/X/2018</td>
+													<td>BRI Kab. Barru</td>
+													<td>Penawaran Harga AC</td>
 													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_penawaran.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 												<tr>
 													<td>3</td>
 													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pengerjaan</td>
+													<td>116/SPH-AC/SSM/X/2018</td>
+													<td>BRI Kab. Barru</td>
+													<td>Penawaran Harga AC</td>
 													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_penawaran.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 												<tr>
 													<td>4</td>
 													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Ida</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
+													<td>116/SPH-AC/SSM/X/2018</td>
+													<td>BRI Kab. Barru</td>
+													<td>Penawaran Harga AC</td>
 													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_penawaran.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 												<tr>
 													<td>5</td>
 													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Rahm</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
+													<td>116/SPH-AC/SSM/X/2018</td>
+													<td>BRI Kab. Barru</td>
+													<td>Penawaran Harga AC</td>
 													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_penawaran.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 											</tbody>
@@ -473,7 +457,7 @@
 		<!--end::Page Snippets -->
 		<script src="http://localhost:35729/livereload.js"></script>
 		<script type="text/javascript">
-			var tbl_spk_survey = $('#tbl_spk_survey').mDatatable({
+			var tbl_list_penawaran = $('#tbl_list_penawaran').mDatatable({
 				data: {
 					saveState: {cookie: false},
 					/*type: 'remote',
@@ -525,19 +509,15 @@
 					format: 'DD/MM/YYYY',
 				},
 				{
-					field: 'No SPK',
+					field: 'Reff',
 					textAlign: 'center',
 				},
 				{
-					field: 'Nama Pelanggan',
+					field: 'Penerima',
 					textAlign: 'center',
 				},
 				{
-					field: 'No Telpon',
-					textAlign: 'center',
-				},
-				{
-					field: 'Status',
+					field: 'Perihal',
 					textAlign: 'center',
 				},
 				{
