--- a/admin toko/master_stock.html
+++ b/admin toko/master_stock.html
@@ -15,7 +15,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin Toko | SPK Survey
+			Admin Gudang | Stock
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,6 +43,11 @@
 		<!-- end:: Style tambahan -->
 		<!--end::Base Styles -->
 		<link rel="shortcut icon" href="../assets/demo/default/media/img/logo/favicon.ico" />
+		<style>
+			.modal-dialog {
+				max-width: 500px !important;
+			}
+		</style>
 	</head>
 	<!-- end::Head -->
 	<!-- end::Body -->
@@ -90,7 +95,7 @@
 							<div class="m-stack__item m-stack__item--fluid m-header-head" id="m_header_nav">
 								<!-- BEGIN: Horizontal Menu -->
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-light m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-dark m-aside-header-menu-mobile--submenu-skin-dark "  >
-									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_toko.png">
+									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/Asset 5@2x.png">
 								</div>
 								<!-- END: Horizontal Menu -->								
 								<!-- BEGIN: Topbar -->
@@ -131,7 +136,7 @@
 						<!-- ASIDE MENU DISINI -->
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
 							<!-- DASHBOARD -->
-							<li class="m-menu__item " aria-haspopup="true" >
+							<li class="m-menu__item  " aria-haspopup="true" >
 								<a  href="index.html" class="m-menu__link ">
 									<i class="m-menu__link-icon flaticon-line-graph"></i>
 									<span class="m-menu__link-title">
@@ -156,8 +161,8 @@
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pesanan -->
-							<li class="m-menu__item  m-menu__item--submenu m-menu__item--open m-menu__item--expanded" aria-haspopup="true" data-menu-submenu-toggle="hover">
+							<!-- Manajemen Pesanan-->
+							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
 								<a href="#" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon flaticon-folder-2"></i>
 									<span class="m-menu__link-text">
@@ -175,7 +180,7 @@
 												</span>
 											</span>
 										</li>
-										<li class="m-menu__item  " aria-haspopup="true">
+										<li class="m-menu__item " aria-haspopup="true">
 											<a href="spk_pemasangan.html" class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
@@ -215,7 +220,7 @@
 												</span>
 											</a>
 										</li>
-										<li class="m-menu__item m-menu__item--active" aria-haspopup="true">
+										<li class="m-menu__item " aria-haspopup="true">
 											<a href="spk_survey.html"  class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
@@ -242,7 +247,7 @@
 								</a>
 							</li>
 							<!-- Master Stock -->
-							<li class="m-menu__item" aria-haspopup="true" >
+							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
 								<a  href="master_stock.html" class="m-menu__link ">
 									<i class="m-menu__link-icon flaticon-list-1"></i>
 									<span class="m-menu__link-title">
@@ -291,7 +296,7 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									SPK Survey
+									Stock
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
@@ -303,19 +308,9 @@
 										-
 									</li>
 									<li class="m-nav__item">
-										<a href="#.html" class="m-nav__link">
+										<a href="master_stock.html" class="m-nav__link">
 											<span class="m-nav__link-text">
-												Manajemen Pesanan
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="spk_survey.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												SPK Survey
+												Stock
 											</span>
 										</a>
 									</li>
@@ -327,109 +322,113 @@
 					<div class="m-content">
 						<div class="row">
 							<div class="col-xl-12">
-								<div class="m-portlet m-portlet--mobile">
-									<div class="m-portlet__body">
-										<!--begin: Search Form -->
-										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-											<div class="row align-items-center">
-												<div class="col-md-12">
-													<div class="form-group m-form__group row align-items-center">
-														<div class="col-md-4">
-															<div class="m-portlet__head-title">
-																<h3 class="m-portlet__head-text">
-																	List SPK Survey
-																</h3>
-																<button onclick="window.location.href = 'tambah_spk_survey.html';" type="button" class="btn btn-success btn_tambah_spk">Tambah SPK</button>
-															</div>
-														</div>
-														<div class="col-md-4 offset-md-4">
-															<div class="m-input-icon m-input-icon--left">
-																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-																<span class="m-input-icon__icon m-input-icon__icon--left">
-																	<span>
-																		<i class="la la-search"></i>
-																	</span>
-																</span>
-															</div>
-														</div>
-													</div>
+								<div class="m-portlet">
+									<div class="m-portlet__head">
+										<div class="m-portlet__head-caption">
+											<div class="m-portlet__head-title ">
+												<h3 class="m-portlet__head-text">
+													List Stock
+												</h3>
+												<div>
+													<button style="margin-top: 15px;margin-left: 30px" class="btn btn-primary" data-toggle="modal" data-target="#m_tambah_stock">
+														tambah stock
+													</button>
 												</div>
 											</div>
 										</div>
-										<!--end: Search Form -->
-										<!--begin: Datatable -->
-										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_spk_survey">
-											<thead>
-												<tr>
-													<th>No</th>
-													<th>Tanggal</th>
-													<th>No SPK</th>
-													<th>Nama Pelanggan</th>
-													<th>No Telpon</th>
-													<th>Status</th>
-													<th>Aksi</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>1</td>
-													<td>20/19/2018</td>
-													<td>0037/SSM/SPK-PSG/MKS/III/2019</td>
-													<td>TK. Aisiyah Bustanul Atfhal</td>
-													<td>085145322xxx</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>2</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>3</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>4</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Ida</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>5</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Rahm</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_survey.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-										<!--end: Datatable -->
+									</div>
+									<div class="m-portlet__body">
+										<div style="display: inline;" class="col-md-12">
+											<div class="m-input-icon m-input-icon--left">
+												<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+												<span class="m-input-icon__icon m-input-icon__icon--left">
+													<span>
+														<i class="la la-search"></i>
+													</span>
+												</span>
+											</div>
+										</div>
+										<div>
+											<table class="table" id="tbl_list_stock_gudang">
+												<thead>
+													<tr>
+														<th>No</th>
+														<th>Kode</th>
+														<th>No Seri</th>
+														<th>Nama Barang</th>
+														<th>Tipe</th>
+														<th>Merek</th>
+														<th>Jumlah</th>
+														<th>Satuan</th>
+														<th>Status</th>
+														<th>Keterangan</th>
+														<!-- <th>Aksi</th> -->
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>1</td>
+														<td>#14253617</td>
+														<td>1105791</td>
+														<td>Thermistor RKD25GVM</td>
+														<td>Thermistor</td>
+														<td>Daikin</td>
+														<td>20</td>
+														<td>unit</td>
+														<td>tersedia</td>
+														<td>-</td>
+													</tr>
+													<tr>
+														<td>2</td>
+														<td>#14253617</td>
+														<td>1105791</td>
+														<td>Thermistor RKD25GVM</td>
+														<td>Thermistor</td>
+														<td>Daikin</td>
+														<td>20</td>
+														<td>unit</td>
+														<td>tersedia</td>
+														<td>-</td>
+													</tr>
+													<tr>
+														<td>3</td>
+														<td>#14253617</td>
+														<td>1105791</td>
+														<td>Thermistor RKD25GVM</td>
+														<td>Thermistor</td>
+														<td>Daikin</td>
+														<td>20</td>
+														<td>unit</td>
+														<td>Hampir Habis</td>
+														<td>-</td>
+													</tr>
+													<tr>
+														<td>4</td>
+														<td>#14253617</td>
+														<td>1105791</td>
+														<td>Thermistor RKD25GVM</td>
+														<td>Thermistor</td>
+														<td>Daikin</td>
+														<td>20</td>
+														<td>unit</td>
+														<td>tersedia</td>
+														<td>-</td>
+													</tr>
+													<tr>
+														<td>5</td>
+														<td>#14253617</td>
+														<td>1105791</td>
+														<td>Thermistor RKD25GVM</td>
+														<td>Thermistor</td>
+														<td>Daikin</td>
+														<td>20</td>
+														<td>unit</td>
+														<td>Hampir habis</td>
+														<td>-</td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -438,6 +437,114 @@
 				</div>
 			</div>
 			<!-- end:: Body -->
+			<!--begin::Modal-->
+			<div class="modal fade" id="m_tambah_stock"   role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">
+								Tambah Stock
+							</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">
+									&times;
+								</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Kode
+								</label>
+								<div class="col-9">
+									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="kode_item" tabindex="-1" aria-hidden="true">
+										<option value="1" >
+											12345678
+										</option>
+										<option value="2">
+											21345635
+										</option>
+										<option value="3">
+											15357352
+										</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									No. Seri
+								</label>
+								<div class="col-9">
+									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="no_seri_item" tabindex="-1" aria-hidden="true">
+										<option value="1" >
+											abcdefg
+										</option>
+										<option value="2">
+											bvcdffh
+										</option>
+										<option value="3">
+											ywdhfgs
+										</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Nama item
+								</label>
+								<div class="col-9">
+									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="nama_item" tabindex="-1" aria-hidden="true">
+										<option value="1" >
+											AC satu
+										</option>
+										<option value="2">
+											AC dua
+										</option>
+										<option value="3">
+											AC tiga
+										</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Jumlah
+								</label>
+								<div class="col-9">
+									<input class="form-control m-input" type="number" value="20" id="jumlah_item">
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Satuan
+								</label>
+								<div class="col-9">
+									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="satuan_item" tabindex="-1" aria-hidden="true">
+										<option value="1" >
+											Unit
+										</option>
+										<option value="2">
+											Meter
+										</option>
+										<option value="3">
+											Set
+										</option>
+									</select>
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">
+								Tutup
+							</button>
+							<button id="btn_tambah" type="button" class="btn btn-primary" data-dismiss="modal">
+								Tambah
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--end::Modal-->
 			<!-- begin::Footer -->
 			<footer class="m-grid__item		m-footer ">
 				<div class="m-container m-container--fluid m-container--full-height m-page__container">
@@ -469,11 +576,8 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-
-		<!--end::Page Snippets -->
-		<script src="http://localhost:35729/livereload.js"></script>
 		<script type="text/javascript">
-			var tbl_spk_survey = $('#tbl_spk_survey').mDatatable({
+			var tbl_list_stock_gudang = $('#tbl_list_stock_gudang').mDatatable({
 				data: {
 					saveState: {cookie: false},
 					/*type: 'remote',
@@ -516,28 +620,48 @@
 				{
 					field: 'No',
 					textAlign: 'center',
-					width: 50
+					width: 30
 				},
 				{
-					field: 'Tanggal',
+					field: 'Kode',
 					textAlign: 'center',
-					type:'date',
-					format: 'DD/MM/YYYY',
+					width: 70
 				},
 				{
-					field: 'No SPK',
+					field: 'No Seri',
+					textAlign: 'center',
+					width: 70
+				},
+				{
+					field: 'Nama Barang',
 					textAlign: 'center',
 				},
 				{
-					field: 'Nama Pelanggan',
+					field: 'Tipe',
 					textAlign: 'center',
+					width: 90
 				},
 				{
-					field: 'No Telpon',
+					field: 'Merek',
 					textAlign: 'center',
+					width: 80
+				},
+				{
+					field: 'Jumlah',
+					textAlign: 'center',
+					width: 60
+				},
+				{
+					field: 'Satuan',
+					textAlign: 'center',
+					width: 60
 				},
 				{
 					field: 'Status',
+					textAlign: 'center',
+				},
+				{
+					field: 'Keterangan',
 					textAlign: 'center',
 				},
 				{
@@ -548,6 +672,61 @@
 				],
 			});
 		</script>
+		<script>
+			var Select2 = function() {
+				var demos = function(){
+				 // basic
+				 $('.dropdown_search, .dropdown_search_validate').select2({
+				 	placeholder: "Select a state"
+				 });
+				}
+				var modalDemos = function(){
+					$('#m_select2_modal').on('shown.bs.modal', function () {
+				// basic
+				$('.dropdown_search_modal').select2({
+					placeholder: "Select a state"
+				});
+			});
+				}
+				return {
+					init: function() {
+						demos();
+						modalDemos();
+					}
+				};
+			}();
+			//== Initialization
+			jQuery(document).ready(function() {
+				Select2.init();
+			});
+		</script>
+		<script>
+			//== Class definition
+			var SweetAlert2Demo = function() {
+
+			//== Demos
+			var initDemos = function() {
+
+				$('#btn_tambah').click(function(e) {
+					swal("Berhasil!", "Stock item telah ditambahkan","success");
+				});
+			};
+
+			return {
+					//== Init
+					init: function() {
+						initDemos();
+					},
+				};
+			}();
+
+			//== Class Initialization
+			jQuery(document).ready(function() {
+				SweetAlert2Demo.init();
+			});
+		</script>
+		<!--end::Page Snippets -->
+		<script src="http://localhost:35729/livereload.js"></script>
 	</body>
 	<!-- end::Body -->
 	</html>
