--- a/admin toko/tambah_spk_komplain.html
+++ b/admin toko/tambah_spk_komplain.html
@@ -227,7 +227,7 @@
 						</li>
 						<!-- Penawaran -->
 						<li class="m-menu__item" aria-haspopup="true" >
-							<a  href="penawaran.html" class="m-menu__link ">
+							<a  href="manajemen_penawaran.html" class="m-menu__link ">
 								<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
@@ -240,7 +240,7 @@
 						</li>
 						<!-- Pelanggan -->
 						<li class="m-menu__item " aria-haspopup="true" >
-							<a  href="pelanggan.html" class="m-menu__link ">
+							<a  href="manajemen_pelanggan.html" class="m-menu__link ">
 								<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
