--- a/admin toko/tambah_surat_jalan.html
+++ b/admin toko/tambah_surat_jalan.html
@@ -181,7 +181,7 @@
 						</li>
 						<!-- Stock -->
 						<li class="m-menu__item" aria-haspopup="true" >
-							<a  href="stock.html" class="m-menu__link ">
+							<a  href="master_stock.html" class="m-menu__link ">
 								<i class="m-menu__link-icon flaticon-list-1"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
