--- a/admin finance/invoice_barang.html
+++ b/admin finance/invoice_barang.html
@@ -15,7 +15,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin Toko | SPK Servis
+			Admin Finance | Manajemen Invoice Keluar - Barang
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,6 +43,11 @@
 		<!-- end:: Style tambahan -->
 		<!--end::Base Styles -->
 		<link rel="shortcut icon" href="../assets/demo/default/media/img/logo/favicon.ico" />
+		<style>
+			.m-datatable.m-datatable--default > .m-datatable__pager > .m-datatable__pager-info {
+				display: none !important;
+			}
+		</style>
 	</head>
 	<!-- end::Head -->
 	<!-- end::Body -->
@@ -90,7 +95,7 @@
 							<div class="m-stack__item m-stack__item--fluid m-header-head" id="m_header_nav">
 								<!-- BEGIN: Horizontal Menu -->
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-light m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-dark m-aside-header-menu-mobile--submenu-skin-dark "  >
-									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_toko.png">
+									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_finance.png">
 								</div>
 								<!-- END: Horizontal Menu -->								
 								<!-- BEGIN: Topbar -->
@@ -143,25 +148,12 @@
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pelanggan -->
-							<li class="m-menu__item  " aria-haspopup="true" >
-								<a  href="manajemen_pelanggan.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Manajemen	Pelanggan
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Manajemen Pesanan -->
+							<!--Manajemen Invoice Keluar-->
 							<li class="m-menu__item  m-menu__item--submenu m-menu__item--open m-menu__item--expanded" aria-haspopup="true" data-menu-submenu-toggle="hover">
 								<a href="#" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon flaticon-folder-2"></i>
 									<span class="m-menu__link-text">
-										Manajemen Pesanan
+										Manajemen Invoice Keluar
 									</span>
 									<i style="font-size: 1.5rem" class="m-menu__ver-arrow fa fa-caret-right"></i>
 								</a>
@@ -171,80 +163,37 @@
 										<li class="m-menu__item  m-menu__item--parent" aria-haspopup="true">
 											<span class="m-menu__link">
 												<span class="m-menu__link-text">
-													Pesanan
+													Manajemen Invoice Keluar
 												</span>
 											</span>
 										</li>
-										<li class="m-menu__item  " aria-haspopup="true">
-											<a href="spk_pemasangan.html" class="m-menu__link ">
+										<li class="m-menu__item  m-menu__item--active" aria-haspopup="true">
+											<a href="invoice_barang.html" class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
 												</i>
 												<span class="m-menu__link-text">
-													SPK Pemasangan
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item m-menu__item--active" aria-haspopup="true">
-											<a href="spk_servis.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Servis
+													Invoice Barang
 												</span>
 											</a>
 										</li>
 										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_free.html"  class="m-menu__link ">
+											<a href="invoice_material.html"  class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
 												</i>
 												<span class="m-menu__link-text">
-													SPK Free
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_komplain.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Komplain
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_survey.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Survey
+													Invoice Material
 												</span>
 											</a>
 										</li>
 									</ul>
 								</div>
 							</li>
-							<!-- Manajemen Penawaran -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_penawaran.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Manajemen Penawaran
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
 							<!-- Master Stock -->
-							<li class="m-menu__item" aria-haspopup="true" >
+							<li class="m-menu__item  " aria-haspopup="true" >
 								<a  href="master_stock.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-list-1"></i>
+									<i class="m-menu__link-icon  flaticon-open-box"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
@@ -254,7 +203,8 @@
 									</span>
 								</a>
 							</li>
-							<!-- Harga Item dan Jasa -->
+							
+							<!-- Manajemen Harga -->
 							<li class="m-menu__item" aria-haspopup="true" >
 								<a  href="manajemen_harga.html" class="m-menu__link ">
 									<i class="m-menu__link-icon la la-list"></i>
@@ -262,19 +212,6 @@
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
 												Manajemen Harga
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Manajemen Pembayaran -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_pembayaran.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-file-1"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												manajemen pembayaran
 											</span>
 										</span>
 									</span>
@@ -291,32 +228,12 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									SPK Servis
+									Manajemen Invoice Keluar | Barang
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
 										<a href="index.html" class="m-nav__link m-nav__link--icon">
 											<i class="m-nav__link-icon la la-home"></i>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="#.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												Manajemen Pesanan
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="spk_servis.html.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												SPK Servis
-											</span>
 										</a>
 									</li>
 								</ul>
@@ -337,9 +254,9 @@
 														<div class="col-md-4">
 															<div class="m-portlet__head-title">
 																<h3 class="m-portlet__head-text">
-																	List SPK Servis
+																	List Invoice Barang
 																</h3>
-																<button onclick="window.location.href = 'tambah_spk_servis	.html';" type="button" href="tambah_spk_pemasangan.html" class="btn btn-success btn_tambah_spk">Tambah SPK</button>
+																<button onclick="window.location.href = 'tambah_invoice_barang.html';" type="button" class="btn btn-success ">tambah Invoice</button>
 															</div>
 														</div>
 														<div class="col-md-4 offset-md-4">
@@ -359,12 +276,12 @@
 										<!--end: Search Form -->
 										<!--begin: Datatable -->
 										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_spk_servis">
+										<table class="table" id="tbl_list_invoice_barang">
 											<thead>
 												<tr>
 													<th>No</th>
 													<th>Tanggal</th>
-													<th>No SPK</th>
+													<th>No Invoice</th>
 													<th>Nama Pelanggan</th>
 													<th>No Telpon</th>
 													<th>Status</th>
@@ -378,9 +295,9 @@
 													<td>1923102301</td>
 													<td>Bpk. Hendy</td>
 													<td>085145322137</td>
-													<td>Selesai</td>
+													<td>Lunas</td>
 													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_invoice_barang.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 												<tr>
@@ -389,9 +306,9 @@
 													<td>1923102301</td>
 													<td>Bpk. Suminto</td>
 													<td>085145322137</td>
-													<td>Pengerjaan</td>
+													<td>Belum Lunas</td>
 													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_invoice_barang.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 												<tr>
@@ -402,7 +319,7 @@
 													<td>085145322137</td>
 													<td>Pengerjaan</td>
 													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_invoice_barang.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 												<tr>
@@ -411,9 +328,9 @@
 													<td>1923102301</td>
 													<td>Ibu Ida</td>
 													<td>085145322137</td>
-													<td>Selesai</td>
+													<td>Belum Lunas</td>
 													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_invoice_barang.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 												<tr>
@@ -422,9 +339,9 @@
 													<td>1923102301</td>
 													<td>Ibu Munna</td>
 													<td>085145322137</td>
-													<td>Selesai</td>
+													<td>Lunas</td>
 													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+														<a href="rincian_invoice_barang.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 													</td>
 												</tr>
 											</tbody>
@@ -438,6 +355,93 @@
 				</div>
 			</div>
 			<!-- end:: Body -->
+			<!-- Modal : TAMBAH ITEM -->
+			<div class="modal fade" id="modal_tambah_barang"   role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">
+								Tambah Barang
+							</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">
+									&times;
+								</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Nama Barang
+								</label>
+								<div class="col-9">
+									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="nama_item" tabindex="-1" aria-hidden="true">
+										<option value="1" >
+											AC 1
+										</option>
+										<option value="2">
+											AC 2
+										</option>
+										<option value="3">
+											AC 3
+										</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Qty
+								</label>
+								<div class="col-9">
+									<input class="form-control m-input" type="number" value="20" id="jumlah_item">
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Satuan
+								</label>
+								<div class="col-9">
+									<select disabled="" style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="satuan" tabindex="-1" aria-hidden="true">
+										<option elected="" value="1" >
+											Unit
+										</option>
+										<option s value="2">
+											Meter
+										</option>
+										<option value="3">
+											Pcs
+										</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Harga
+								</label>
+								<div class="col-9">
+									<input class="form-control m-input" type="text" value="Rp4,900,000" id="harga_item">
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Harga Khusus
+								</label>
+								<div class="col-9">
+									<input class="form-control m-input" type="text" value="Rp3,200,000" id="harga_khusus">
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">
+								Tutup
+							</button>
+							<button id="btn_tambah" type="button" class="btn btn-primary" data-dismiss="modal">
+								Tambah
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
 			<!-- begin::Footer -->
 			<footer class="m-grid__item		m-footer ">
 				<div class="m-container m-container--fluid m-container--full-height m-page__container">
@@ -469,11 +473,66 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-
 		<!--end::Page Snippets -->
 		<script src="http://localhost:35729/livereload.js"></script>
+		<script>
+			var Select2 = function() {
+				var demos = function(){
+				 // basic
+				 $('.dropdown_search, .dropdown_search_validate').select2({
+				 	placeholder: "Select a state"
+				 });
+				}
+				var modalDemos = function(){
+					$('#m_select2_modal').on('shown.bs.modal', function () {
+				// basic
+				$('.dropdown_search_modal').select2({
+					placeholder: "Select a state"
+				});
+			});
+				}
+				return {
+					init: function() {
+						demos();
+						modalDemos();
+					}
+				};
+			}();
+			//== Initialization
+			jQuery(document).ready(function() {
+				Select2.init();
+			});
+		</script>
+		<script>
+			//== Class definition
+			var SweetAlert2Demo = function() {
+
+			//== Demos
+			var initDemos = function() {
+
+				$('#btn_simpan_data').click(function(e) {
+					swal("Berhasil!", "Data Invoice Telah Tersimpan","success");
+				});
+				$('#btn_tambah').click(function(e) {
+					swal("Berhasil!", "data yang anda inputkan telah dimasukkan ke list item barang", "success");
+				});
+			};
+
+			return {
+					//== Init
+					init: function() {
+						initDemos();
+					},
+				};
+			}();
+
+			//== Class Initialization
+			jQuery(document).ready(function() {
+				SweetAlert2Demo.init();
+			});
+		</script>
 		<script type="text/javascript">
-			var tbl_spk_servis = $('#tbl_spk_servis').mDatatable({
+			var tbl_list_invoice_barang = $('#tbl_list_invoice_barang').mDatatable({
 				data: {
 					saveState: {cookie: false},
 					/*type: 'remote',
@@ -525,7 +584,7 @@
 					format: 'DD/MM/YYYY',
 				},
 				{
-					field: 'No SPK',
+					field: 'No Invoice',
 					textAlign: 'center',
 				},
 				{
