--- a/admin finance/invoice_masuk.html
+++ b/admin finance/invoice_masuk.html
@@ -15,7 +15,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin Toko | SPK Servis
+			Admin Finance | Dashboard
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -90,7 +90,7 @@
 							<div class="m-stack__item m-stack__item--fluid m-header-head" id="m_header_nav">
 								<!-- BEGIN: Horizontal Menu -->
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-light m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-dark m-aside-header-menu-mobile--submenu-skin-dark "  >
-									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_toko.png">
+									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_finance.png">
 								</div>
 								<!-- END: Horizontal Menu -->								
 								<!-- BEGIN: Topbar -->
@@ -131,7 +131,7 @@
 						<!-- ASIDE MENU DISINI -->
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
 							<!-- DASHBOARD -->
-							<li class="m-menu__item " aria-haspopup="true" >
+							<li class="m-menu__item  " aria-haspopup="true" >
 								<a  href="index.html" class="m-menu__link ">
 									<i class="m-menu__link-icon flaticon-line-graph"></i>
 									<span class="m-menu__link-title">
@@ -143,25 +143,25 @@
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pelanggan -->
-							<li class="m-menu__item  " aria-haspopup="true" >
-								<a  href="manajemen_pelanggan.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
+							<!--Invoice Masuk-->
+							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
+								<a  href="invoice_masuk.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa 	fa-wpforms"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Manajemen	Pelanggan
+												Invoice Masuk
 											</span>
 										</span>
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pesanan -->
-							<li class="m-menu__item  m-menu__item--submenu m-menu__item--open m-menu__item--expanded" aria-haspopup="true" data-menu-submenu-toggle="hover">
+							<!--Manajemen Invoice Keluar-->
+							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
 								<a href="#" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon flaticon-folder-2"></i>
 									<span class="m-menu__link-text">
-										Manajemen Pesanan
+										Manajemen Invoice Keluar
 									</span>
 									<i style="font-size: 1.5rem" class="m-menu__ver-arrow fa fa-caret-right"></i>
 								</a>
@@ -171,80 +171,38 @@
 										<li class="m-menu__item  m-menu__item--parent" aria-haspopup="true">
 											<span class="m-menu__link">
 												<span class="m-menu__link-text">
-													Pesanan
+													Manajemen Invoice Keluar
 												</span>
 											</span>
 										</li>
-										<li class="m-menu__item  " aria-haspopup="true">
-											<a href="spk_pemasangan.html" class="m-menu__link ">
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="invoice_barang.html" class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
 												</i>
 												<span class="m-menu__link-text">
-													SPK Pemasangan
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item m-menu__item--active" aria-haspopup="true">
-											<a href="spk_servis.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Servis
+													Invoice Barang
 												</span>
 											</a>
 										</li>
 										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_free.html"  class="m-menu__link ">
+											<a href="invoice_material.html"  class="m-menu__link ">
 												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 													<span></span>
 												</i>
 												<span class="m-menu__link-text">
-													SPK Free
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_komplain.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Komplain
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_survey.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Survey
+													Invoice Material
 												</span>
 											</a>
 										</li>
 									</ul>
 								</div>
 							</li>
-							<!-- Manajemen Penawaran -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_penawaran.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Manajemen Penawaran
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
+							
 							<!-- Master Stock -->
-							<li class="m-menu__item" aria-haspopup="true" >
+							<li class="m-menu__item  " aria-haspopup="true" >
 								<a  href="master_stock.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-list-1"></i>
+									<i class="m-menu__link-icon  flaticon-open-box"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
@@ -254,7 +212,7 @@
 									</span>
 								</a>
 							</li>
-							<!-- Harga Item dan Jasa -->
+							<!-- Manajemen Harga -->
 							<li class="m-menu__item" aria-haspopup="true" >
 								<a  href="manajemen_harga.html" class="m-menu__link ">
 									<i class="m-menu__link-icon la la-list"></i>
@@ -262,19 +220,6 @@
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
 												Manajemen Harga
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Manajemen Pembayaran -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_pembayaran.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-file-1"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												manajemen pembayaran
 											</span>
 										</span>
 									</span>
@@ -291,32 +236,12 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									SPK Servis
+									Invoice Masuk
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
 										<a href="index.html" class="m-nav__link m-nav__link--icon">
 											<i class="m-nav__link-icon la la-home"></i>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="#.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												Manajemen Pesanan
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="spk_servis.html.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												SPK Servis
-											</span>
 										</a>
 									</li>
 								</ul>
@@ -326,110 +251,98 @@
 					<!-- END: Subheader -->
 					<div class="m-content">
 						<div class="row">
-							<div class="col-xl-12">
-								<div class="m-portlet m-portlet--mobile">
-									<div class="m-portlet__body">
-										<!--begin: Search Form -->
-										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-											<div class="row align-items-center">
-												<div class="col-md-12">
-													<div class="form-group m-form__group row align-items-center">
-														<div class="col-md-4">
-															<div class="m-portlet__head-title">
-																<h3 class="m-portlet__head-text">
-																	List SPK Servis
-																</h3>
-																<button onclick="window.location.href = 'tambah_spk_servis	.html';" type="button" href="tambah_spk_pemasangan.html" class="btn btn-success btn_tambah_spk">Tambah SPK</button>
-															</div>
-														</div>
-														<div class="col-md-4 offset-md-4">
-															<div class="m-input-icon m-input-icon--left">
-																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-																<span class="m-input-icon__icon m-input-icon__icon--left">
-																	<span>
-																		<i class="la la-search"></i>
-																	</span>
-																</span>
-															</div>
-														</div>
-													</div>
+							<div style="display: none">
+								<div class="col-xl-6">
+									<div class="m-portlet m--bg-accent-kuning m-portlet--bordered-semi m-portlet--skin-dark m-portlet--full-height ">
+										<div class="m-portlet__head">
+											<div class="m-portlet__head-caption">
+												<div class="m-portlet__head-title">
+													<h3 style="font-size: 1.4rem" class="m-portlet__head-text">
+														Total SPK Pemasangan
+													</h3>
 												</div>
 											</div>
 										</div>
-										<!--end: Search Form -->
-										<!--begin: Datatable -->
-										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_spk_servis">
-											<thead>
-												<tr>
-													<th>No</th>
-													<th>Tanggal</th>
-													<th>No SPK</th>
-													<th>Nama Pelanggan</th>
-													<th>No Telpon</th>
-													<th>Status</th>
-													<th>Aksi</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>1</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Hendy</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>2</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>3</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>4</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Ida</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>5</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Munna</td>
-													<td>085145322137</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_servis.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-										<!--end: Datatable -->
+										<div class="m-portlet__body">
+											<div align="left" style="display:inline-block" class="col-8">
+												<span>
+													<i style="font-size: 4.4rem; color: rgba(0,0,0,.2);" class="fa fa-file-text-o"></i>
+												</span>
+											</div>
+											<!--begin::Widget 7-->
+											<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
+												<span  id="total_spk_pemasangan" class="item-font">102</span> spk
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-xl-6">
+									<div class="m-portlet m--bg-accent-biru m-portlet--bordered-semi m-portlet--skin-dark m-portlet--full-height ">
+										<div class="m-portlet__head">
+											<div class="m-portlet__head-caption">
+												<div class="m-portlet__head-title">
+													<h3 style="font-size: 1.4rem" class="m-portlet__head-text">
+														Totak SPK Servis
+													</h3>
+												</div>
+											</div>
+										</div>
+										<div class="m-portlet__body">
+											<div align="left" style="display:inline-block" class="col-8">
+												<span>
+													<i style="font-size: 4.4rem; color: rgba(0,0,0,.2);" class="fa fa-file-text-o"></i>
+												</span>
+											</div>
+											<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
+												<span  id="total_spk_servis" class="item-font">70</span> spk
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-xl-6">
+									<div class="m-portlet m--bg-accent-hijau m-portlet--bordered-semi m-portlet--skin-dark m-portlet--full-height ">
+										<div class="m-portlet__head">
+											<div class="m-portlet__head-caption">
+												<div class="m-portlet__head-title">
+													<h3 style="font-size: 1.4rem" class="m-portlet__head-text">
+														Totak SPK Free
+													</h3>
+												</div>
+											</div>
+										</div>
+										<div class="m-portlet__body">
+											<div align="left" style="display:inline-block" class="col-8">
+												<span>
+													<i style="font-size: 4.4rem; color: rgba(0,0,0,.2);" class="fa fa-file-text-o"></i>
+												</span>
+											</div>
+											<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
+												<span  id="total_spk_free" class="item-font">47</span> spk
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-xl-6">
+									<div class="m-portlet m--bg-accent-merah m-portlet--bordered-semi m-portlet--skin-dark m-portlet--full-height ">
+										<div class="m-portlet__head">
+											<div class="m-portlet__head-caption">
+												<div class="m-portlet__head-title">
+													<h3 style="font-size: 1.4rem" class="m-portlet__head-text">
+														Total SPK Komplain
+													</h3>
+												</div>
+											</div>
+										</div>
+										<div class="m-portlet__body">
+											<div align="left" style="display:inline-block" class="col-8">
+												<span>
+													<i style="font-size: 4.4rem; color: rgba(0,0,0,.2);" class="fa fa-file-text-o"></i>
+												</span>
+											</div>
+											<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
+												<span  id="total_spk_komplain" class="item-font">10</span> spk
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -469,85 +382,8 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-
 		<!--end::Page Snippets -->
 		<script src="http://localhost:35729/livereload.js"></script>
-		<script type="text/javascript">
-			var tbl_spk_servis = $('#tbl_spk_servis').mDatatable({
-				data: {
-					saveState: {cookie: false},
-					/*type: 'remote',
-			        source: {
-			          read: {
-			            // sample GET method
-			            method: 'GET',
-			            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
-			            map: function(raw) {
-			              // sample data mapping
-			              var dataSet = raw;
-			              if (typeof raw.data !== 'undefined') {
-			                dataSet = raw.data;
-			              }
-			              return dataSet;
-			            },
-			          },
-			        },
-			        pageSize: 10,
-			        serverPaging: true,
-			        serverFiltering: true,
-			        serverSorting: true,*/
-			    },
-				// layout definition
-				layout: {
-					theme: 'default', // datatable theme
-					class: '', // custom wrapper class
-					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
-					// height: 450, // datatable's body's fixed height
-					footer: false // display/hide footer
-				},
-
-				// column sorting
-				sortable: false,
-				search: {
-					input: $('#generalSearch'),
-				},
-				columns: [
-
-				{
-					field: 'No',
-					textAlign: 'center',
-					width: 50
-				},
-				{
-					field: 'Tanggal',
-					textAlign: 'center',
-					type:'date',
-					format: 'DD/MM/YYYY',
-				},
-				{
-					field: 'No SPK',
-					textAlign: 'center',
-				},
-				{
-					field: 'Nama Pelanggan',
-					textAlign: 'center',
-				},
-				{
-					field: 'No Telpon',
-					textAlign: 'center',
-				},
-				{
-					field: 'Status',
-					textAlign: 'center',
-				},
-				{
-					field: 'Aksi',
-					textAlign: 'center',
-				}
-
-				],
-			});
-		</script>
 	</body>
 	<!-- end::Body -->
 	</html>
