--- a/admin toko/spk_survey.html
+++ b/admin toko/spk_survey.html
@@ -274,7 +274,7 @@
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Manajemen Pemabayaran
+												manajemen pembayaran
 											</span>
 										</span>
 									</span>
