--- a/admin toko/tambah_pelanggan.html
+++ b/admin toko/tambah_pelanggan.html
@@ -300,7 +300,7 @@
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Manajemen Pemabayaran
+												manajemen pembayaran
 											</span>
 										</span>
 									</span>
