--- a/admin toko/tambah_spk_servis.html
+++ b/admin toko/tambah_spk_servis.html
@@ -283,7 +283,7 @@
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Manajemen Pemabayaran
+												manajemen pembayaran
 											</span>
 										</span>
 									</span>
